# ember-rl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/algorithms/: dqn.md  ppo.md
docs/examples/: cartpole_dqn.md  cartpole_ppo.md
examples/: cartpole.rs  cartpole_dqn.rs  cartpole_ppo.rs
src/: encoding.rs  lib.rs  stats.rs  traits.rs
src/algorithms/: mod.rs
src/algorithms/dqn/: agent.rs  config.rs  inference.rs  mod.rs  network.rs  replay.rs
src/algorithms/ppo/: agent.rs  config.rs  mod.rs  network.rs  rollout.rs
src/dashboard/: dashboard.html  mod.rs
src/envs/: cartpole.rs
src/training/: mod.rs  run.rs  runner.rs  session.rs
