[package]
name = "ember-rl"
version = "0.1.0"
edition = "2021"
description = "Reinforcement learning algorithm implementations (DQN, PPO, SAC) using Burn"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidarrio/ember-rl"
keywords = ["deep-learning", "burn", "dqn", "rl", "neural-network"]
categories = ["science", "algorithms"]

[features]
envs = []

[[example]]
name = "cartpole"
required-features = ["envs"]

[dependencies]
rl-traits = "*"
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
rand = { version = "0.8", features = ["small_rng"] }
