[package]
name = "ember-rl"
version = "0.3.3"
edition = "2021"
description = "Reinforcement learning algorithm implementations (DQN, PPO, SAC) using Burn"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidarrio/ember-rl"
keywords = ["deep-learning", "burn", "dqn", "rl", "neural-network"]
categories = ["science", "algorithms"]

[features]
envs = []
dashboard = ["dep:tiny_http"]

[[example]]
name = "cartpole_dqn"
required-features = ["envs"]

[[example]]
name = "cartpole_ppo"
required-features = ["envs"]

[[bin]]
name = "ember-dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]

[dependencies]
rl-traits = "0.2.2"
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = { version = "0.12", optional = true }
